<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="0dp"
    android:theme="@style/AppTheme">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="?attr/colorSurfaceContainer"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:contentPadding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">


            <RadioGroup
                android:id="@+id/radioGroupArchive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonSyncGoogleCloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_sync_cloud_24"
                    android:drawablePadding="20dp"
                    android:paddingVertical="16dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="0dp"
                    android:text="@string/fragment_archive_select_cloud"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButtonSyncDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_sync_folder_24"
                    android:drawablePadding="20dp"
                    android:paddingVertical="16dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="0dp"
                    android:text="@string/fragment_archive_select_filesystem"
                    android:textSize="16sp" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="7dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/textViewLocalCodeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:paddingVertical="16dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="48dp"
                    android:text="@string/fragment_archive_backup_local_code_value"
                    android:textIsSelectable="true"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/buttonBackup"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:text="@string/fragment_archive_backup"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:strokeColor="?attr/colorPrimary" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingVertical="2dp"
                android:paddingStart="7dp"
                android:paddingEnd="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextRemoteCodeValueLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/fragment_archive_backup_local_code"
                    android:paddingStart="0dp"
                    android:paddingEnd="20dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextRemoteCodeValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textNoSuggestions"
                        android:maxLength="10"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="0dp">

                    <Button
                        android:id="@+id/buttonRestore"
                        android:layout_width="120dp"
                        android:layout_height="48dp"
                        android:text="@string/fragment_archive_restore"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:strokeColor="?attr/colorPrimary" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:text="@string/fragment_archive_superseded_info"
                app:drawableStartCompat="@drawable/ic_info_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="3dp"
                android:text="@string/fragment_archive_superseded_1"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:text="@string/fragment_archive_select_cloud_info"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="13dp"
                android:paddingBottom="13dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="7dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp">

                <Button
                    android:id="@+id/buttonNewCode"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="@string/fragment_archive_create_new_sync_code"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:strokeColor="?attr/colorPrimary" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewSyncOnFavourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="?attr/colorSurfaceContainer"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:contentPadding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchAutoCloudBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_sync_cloud_24"
                android:drawablePadding="20dp"
                android:paddingVertical="16dp"
                android:text="@string/fragment_archive_sync_to_cloud_on_favourite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewLastSuccessfulBackupTimestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingTop="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:text="@string/fragment_archive_sync_to_cloud_on_favourite_most_recent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:text="@string/fragment_archive_superseded_info"
                app:drawableStartCompat="@drawable/ic_info_24" />

            <TextView
                android:id="@+id/textViewPermissionWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingTop="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:text="@string/fragment_archive_sync_to_cloud_on_favourite_info_0"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:visibility="gone" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>
